syntax = "proto3";
package microunit.node.v1;

service Node {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
}

message NodeDesc { string uuid = 1; }

message ListNodesRequest {}

message ListNodesResponse { repeated NodeDesc descs = 1; }